# csgobotdiscord

./: .gitignore  LICENSE  main.py  pyproject.toml
resources/: config.py
source/: main.py
source/cogs/: economy.py  owner.py
source/resources/: config.py
source/utils/: loaders.py  time_formatter.py
source/utils/errors/: handler.py  models.py
source/utils/messages/: generator.py
