[tool.poetry]
name = "csgobotdiscord"
version = "0.1.0"
description = "Discord bot with battles system, cs:go items and economy"
authors = ["AlekseyZz <Aleksey#4360>", "csgobotdiscord <maks12345#5770"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
